--- a/firechat/src/css/App.css
+++ b/firechat/src/css/App.css
@@ -1,5 +1,7 @@
 * {
-    background-color: black;
-    color: white;
+    /* background-color: black;
+    color: white; */
+    margin: 0;
+    font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
 }
