--- a/firechat/src/css/Navbar.css
+++ b/firechat/src/css/Navbar.css
@@ -1,10 +1,31 @@
 .navbar h1{
     font-size: 45px;
     background-color: #000000;
+    background-image: none;
     color: white;
 
-    display: flex;
     height: 100px;
+    width: 92%;
+    margin-top: 0px;
+    margin-left: 4%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar :hover{
+    cursor: pointer;
+    font-size: 45px;
+    background-color: #000000;
+    color: orange;
+
+    height: 100px;
+    width: 92%;
+    margin-top: 0px;
+    margin-left: 4%;
+
+    display: flex;
     align-items: center;
     justify-content: center;
 }
