--- a/firechat/src/css/Chat.css
+++ b/firechat/src/css/Chat.css
@@ -1,26 +1,34 @@
 .chat-room {
-    background-color: black;
-    width: 1400px;
+    background-color: transparent;
+    /* background-image: none; */
+    background-position: center top;
+    margin-top: 100px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+
+
 .chat-room :hover{
-    background-color: #F8333C;
+    /* background-color: #F8333C; */
     cursor: pointer;
     font-size: 25px;
-    width: 520px;
+    width: 510px;
 }
 
 .chat-msg {
-    margin-top: 10px;
+    /* background-color: black; */
+    background-image: none;
+    color: black;
+    margin-top: 8px;
+    margin-bottom: 8px;
     border: 1px solid black;
 
     width: 500px;
     height: auto;
 
-    background-color: white;
     display: flex;
 }
 
@@ -42,8 +50,31 @@
 }
 
 .chat-msg p {
+    background-image: none;
     background-color: inherit;
     margin-left: 15px;
     margin-top: 12px;
     font-size: inherit;
+}
+
+.send {
+    background-color: #F8333C;
+    background-color: #fb8500;
+    height: 80px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.send-input {
+    background-color: white;
+    height: 60%;
+}
+
+.send-icon {
+    margin-left: 10px;
+    background-color: white;
+    height: 60%;
 }
