--- a/firechat/src/css/Navbar.css
+++ b/firechat/src/css/Navbar.css
@@ -1,13 +1,14 @@
 .navbar h1{
+    position: fixed;
+    margin-top: 80px;
+
     font-size: 45px;
     background-color: #000000;
     background-image: none;
     color: white;
 
     height: 100px;
-    width: 92%;
-    margin-top: 0px;
-    margin-left: 4%;
+    width: 100%;
 
     display: flex;
     align-items: center;
@@ -16,16 +17,5 @@
 
 .navbar :hover{
     cursor: pointer;
-    font-size: 45px;
-    background-color: #000000;
     color: orange;
-
-    height: 100px;
-    width: 92%;
-    margin-top: 0px;
-    margin-left: 4%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
