--- a/firechat/src/css/App.css
+++ b/firechat/src/css/App.css
@@ -1,9 +1,9 @@
 * {
     background-color: white;
     /* background-color: #fca311; */
-    background-image: url("../images/purple.webp");
+    background-image: linear-gradient(black, #222222, #AA4400);
     background-position: center top;
-    background-size: 1550px 800px;
+    background-size: 2000px 2000px;
     margin: 0;
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,6 +21,9 @@
 
 .google-sign-in {
     width: 100%;
-    background-color: white;
-    background-image: none;
+    margin-top: 100px;
+}
+
+.master {
+    background-color: white ;
 }
