--- a/firechat/src/css/App.css
+++ b/firechat/src/css/App.css
@@ -1,9 +1,9 @@
 * {
     background-color: white;
     /* background-color: #fca311; */
-    /* background-image: linear-gradient(black,#331111, #AA7700); */
+    /* background-image: url("../images/firepaper5.png"); */
+    background-size: 2000px 800px;
     background-position: center top;
-    background-size: 2000px 2000px;
     margin: 0;
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
