--- a/firechat/src/css/Chat.css
+++ b/firechat/src/css/Chat.css
@@ -1,38 +1,36 @@
 .chat-room {
-    /* background-image: none; */
-    margin-top: 120px;
+    background-image: none;
+
+    margin-top: 100px;
     width: 100%;
+
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
-.chat-room :hover{
-    background-image: none;
-    background-color: #F8333C;
-    cursor: pointer;
-    font-size: 25px;
-    width: 510px;
+    border: 3px solid black;
 }
 
 .chat-msg {
     background-image: none;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    border: 1px solid black;
+    margin: 8px;
 
-    width: 500px;
+    width: 600px;
     height: auto;
 
     display: flex;
+    flex-direction: row;
 }
 
-.chat-msg :hover{
-    background-color: #F8333C;
-    width: inherit;
+.chat-msg-sent  {
+    justify-content: right;
 }
+
+.chat-msg-received {
+    justify-content: left;
+}
+
 
 .chat-msg img {
+    background-image: none;
     border-radius: 100%;
 
     width: 60px;
@@ -46,34 +44,20 @@
 
 .chat-msg p {
     background-image: none;
-    background-color: inherit;
-    margin-left: 15px;
-    margin-top: 12px;
-    font-size: inherit;
-}
-
-.send {
-    background-image: none;
-    background-color: transparent;
-    height: 80px;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.send-input {
-    background-image: none;
-    background-color: white;
-    color: black;
-    height: 60%;
-}
-
-.send-icon {
-    background-image: none;
-    background-color: white;
-
     margin-left: 10px;
-    height: 60%;
+    margin-top: 8px;
+    font-size: inherit;
+
+    background-color: #272D2D;
+    color: white;
+    min-height: auto;
+    height: auto;
+    min-height: 40px;
+    width: auto;
+    padding: 8px 20px;
+    border-radius: 20px;
+}
+
+.chat-msg p :hover {
+    background-color: aqua;
 }
