--- a/firechat/src/css/Chat.css
+++ b/firechat/src/css/Chat.css
@@ -1,5 +1,6 @@
-.chat-room {
-    background-image: none;
+ .chat-room {
+    background-image: url("../images/wa2.png");
+    background-size: 400px 400px;
 
     margin-top: 100px;
     width: 100%;
@@ -10,8 +11,8 @@
 }
 
 .chat-msg {
-    background-image: none;
-    margin: 8px;
+    background-color: transparent;
+    margin: 0px 10px;
 
     width: 600px;
     height: auto;
@@ -49,12 +50,13 @@
     font-size: inherit;
 
     background-color: #272D2D;
+    background-color: black;
     color: white;
     min-height: auto;
     height: auto;
     min-height: 40px;
     width: auto;
-    padding: 8px 20px;
+    padding: 12px 20px;
     border-radius: 20px;
 }
 
